--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
       </nav>
 
-      <!-- experiement  -->
+      <!-- wrapper to hold pictures with wrapped text  -->
       <div class="wrapper">
   
           <img src="assets/images/pix.jpg" alt="" class="me">
@@ -52,26 +52,32 @@
           <p class="double-space">      Hello World, my name is Cynthia Higley. This is my website where I will display my software development 
               creations to demonstrate my skills and web development abilities. 
     
-              As a recent graduate of a BA in Software Engineering I have had over 7 year utilizing my skills 
+                As a recent graduate of a BA in Software Engineering I have had over 7 year utilizing my skills 
               professionally.  In the past I integrated API using VB, VBA, and FoxPro using SQL Server and Access. 
               Life is what you make it and education and development have been a goal for my future. 
               While I can work indpendently I also enjoy communicating and collaboarting with others for the best outcome. 
             
-                      Taking this bootcamp class is a wonderful opportunity not only to learn the new language changes, 
+                Taking this bootcamp class is a wonderful opportunity not only to learn the new language changes, 
               as well as learning the coding tools and environments to create wonderful websites. Learning proper coding 
-            processes such as saving your code into a repository in phases of development can prevent a lot of headaches later on 
-          as I learn more coding skills which can lead to new ways to break my code. 
+              processes such as saving your code into a repository in phases of development can prevent a lot of headaches later on 
+              as I learn more coding skills which can lead to new ways to break my code. 
+
+                There are many activities that I use to keep myself busy. Hobbies include real estate, traveling, dancing, hiking, and learning. 
+              A few times a month I try to take in a play, concert, or an event. You can learn a lot about others by experiencing new ideas and approaches. 
+              One of the things I am working on is creating investment projects with my family so that we can generate more cash flow. 
+              Traveling is another thing that fascinates me. Even traveling to other parts of the country you learn different mind sets and subcultures. 
 
 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptate tempora modi excepturi perspiciatis, porro dolore perferendis ut facere ratione id possimus praesentium eos laudantium dolorum culpa qui quidem illum.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptate tempora modi excepturi perspiciatis, porro dolore perferendis ut facere ratione id possimus praesentium eos laudantium dolorum culpa qui quidem illum.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptate tempora modi excepturi perspiciatis, porro dolore perferendis ut facere ratione id possimus praesentium eos laudantium dolorum culpa qui quidem illum.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptate tempora modi excepturi perspiciatis, porro dolore perferendis ut facere ratione id possimus praesentium eos laudantium dolorum culpa qui quidem illum.
         </p>
         </div>
 
       </div>
-    <!-- Optional JavaScript -->
+    <!-- footer -->
+    <br>
+      <div class="footer">
+          <p><i>Cynthia Higley                     Copywrite 2019            UofU Bootstrap Homework</i></p>
+        </div> 
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
